--- a/LanchesSenac/src/index.css
+++ b/LanchesSenac/src/index.css
@@ -11,6 +11,9 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  width: 100%;
+  height: 100%;
 }
 
 a {
@@ -22,13 +25,11 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+html, body {
+  width: 100%;
+  height: 100%;
 }
+
 
 h1 {
   font-size: 3.2em;
