--- a/LanchesSenac/src/components/FormProduto/FormProduto.css
+++ b/LanchesSenac/src/components/FormProduto/FormProduto.css
@@ -1,48 +1,48 @@
-.productform-background {
-    width: 1200px;
+
+#root {
+    width: 100%;
     height: 100%;
-    color: white;
-    background-color: #24383b;
-    border: 2px solid white;
+    background-image: url("../../assets/background/form-product-background.jpg");
 }
 
-.form.control {
-    width: 20px !important;
+.productform-background {
+
+    width: 70vw;
+    height: 60vh;
+    padding-top: 10vh;
+
+    color: white;
+    border: .2vh solid white;
+    background-color: rgba(62, 54, 54, 0.956);
+    border-radius: .4vw;
 }
 
 .productform {
-    width: 100%;
-    height: 100%;
-    padding: 8vh;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 4vh;
+
 }
 
-.product-description {
-    width: 50%;
+.form-conteiner {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 8vw;
+}
+
+.basics-inputs {
+    display: flex;
+    flex-direction: column;
 }
 
 .pricing-group {
     display: flex;
     flex-direction: row;
-    gap: 6vw;
+    gap: 5vw;
 }
 
-.pricing-group .form-control { 
-    width: 200px !important;
+.submit-button-conteiner {
+    width: 100%;
+    
 }
-
-.pricing-group .form.Group { 
-    width: 0% !important;
-}
-
-.conteiner-adicionais {
-    width: 500px;
-    height: 100px;
-    padding: 2px;
-    border: 2px solid white;
-}
-  
