--- a/LanchesSenac/src/components/InputImage/InputImage.css
+++ b/LanchesSenac/src/components/InputImage/InputImage.css
@@ -24,8 +24,8 @@ img {
 }
 
 .image-selector-background {
-    width: 400px;
-    height: 400px;
+    width: 100%;
+    height: 100%;
     background-color: gray;
 
     display: flex;
