--- a/LanchesSenac/src/Pages/PaginaFormProduto/PaginaFormProduto.css
+++ b/LanchesSenac/src/Pages/PaginaFormProduto/PaginaFormProduto.css
@@ -3,6 +3,7 @@
     height: 100%;
     padding: 0 20px;
     border-color: white;
+    background-color: grey;
 
     display: flex;
     align-items: center;
