--- a/LanchesSenac/src/components/FormProduto/FormProduto.css
+++ b/LanchesSenac/src/components/FormProduto/FormProduto.css
@@ -2,7 +2,6 @@
 #root {
     width: 100%;
     height: 100%;
-    background-image: url("../../assets/background/form-product-background.jpg");
 }
 
 .productform-background {
@@ -11,9 +10,8 @@
     height: 60vh;
     padding-top: 10vh;
 
-    color: white;
-    border: .2vh solid white;
-    background-color: rgba(62, 54, 54, 0.956);
+    color: rgb(0, 0, 0);
+    background-color: rgba(255, 255, 255, 0.999);
     border-radius: .4vw;
 }
 
@@ -40,9 +38,4 @@
     display: flex;
     flex-direction: row;
     gap: 5vw;
-}
-
-.submit-button-conteiner {
-    width: 100%;
-    
 }
