--- a/LanchesSenac/src/components/Carrinho/CarrinhoComponent.css
+++ b/LanchesSenac/src/components/Carrinho/CarrinhoComponent.css
@@ -1,12 +1,3 @@
-.carrinho-container {
-    padding: 20px;
-    background-color: #f8f9fa;
-    border: 1px solid #dee2e6;
-    border-radius: 5px;
-    margin: 20px 0;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
   .carrinho-container .p-dataview-list .p-dataview-item {
     padding: 10px;
     border-bottom: 1px solid #dee2e6;
@@ -42,4 +33,8 @@
     font-size: 1.2rem;
     font-weight: bold;
     color: #007bff;
+  }
+
+  .itemPedido {
+    margin-bottom: 10px;
   }
