--- a/LanchesSenac/src/components/Carrinho/CarrinhoComponent.css
+++ b/LanchesSenac/src/components/Carrinho/CarrinhoComponent.css
@@ -1,11 +1,12 @@
 .carrinho-container {
   position: relative;
+  overflow: hidden;
 }
 
 .sidebar {
   position: fixed;
   top: 0;
-  right: -100%; 
+  right: -100%;
   width: 100%;
   max-width: 600px;
   height: 100%;
@@ -14,6 +15,7 @@
   z-index: 999;
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
 }
+
 
 .sidebar-open {
   right: 0;
@@ -53,7 +55,22 @@
 .titulo {
   text-align: center;
   margin-bottom: 20px;
+  font-size: 24px; 
+  font-weight: bold;
 }
+
+@media (max-width: 768px) {
+  .titulo {
+    font-size: 20px; 
+  }
+}
+
+@media (max-width: 420px) {
+  .titulo {
+    font-size: 16px; 
+  }
+}
+
 
 @media (max-width: 768px) {
   .carrinho-item {
@@ -94,18 +111,31 @@
   cursor: pointer;
 }
 
-.rodape {
-  width: 600px;
-  height: 120px; 
-  background-color: RGB(128, 128, 128);
-  position: fixed; 
-  bottom: 0; 
-  right: -600;
-  text-align: center; 
-  color: white;
-  padding-top: 20px;
+.carrinho-container {
+  position: relative;
+  overflow: hidden;
 }
 
-.rodape-open {
+.rodape {
+  width: 100%; 
+  max-width: 600px;
+  height: auto;
+  position: fixed;
+  bottom: 0;
   right: 0;
+  transform: translateX(-50%);
+  text-align: center;
+  color: #fff;
+  background-color: grey;
+  padding: 20px;
+}
+
+.sidebar-open .rodape {
+  transform: translateX(0);
+}
+
+@media (max-width: 768px) {
+  .rodape {
+    font-size: 14px;
+  }
 }
