--- a/LanchesSenac/src/components/Carrinho/CarrinhoComponent.css
+++ b/LanchesSenac/src/components/Carrinho/CarrinhoComponent.css
@@ -10,7 +10,7 @@
   width: 100%;
   max-width: 600px;
   height: 100%;
-  background-color: #fff;
+  background-color: white;
   transition: right 0.3s ease;
   z-index: 999;
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
@@ -37,7 +37,7 @@
   top: 20px;
   right: 10px;
   z-index: 1000;
-  background-color: blue;
+  background-color: #FFBB00;
   width: 60px;
   height: 40px;
 }
@@ -123,9 +123,12 @@
   bottom: 0;
   right: 0;
   text-align: center;
-  color: #fff;
-  background-color: grey;
+  background-color: #FFBB00;
   padding: 20px;
+}
+
+.botao-concluir-pedido {
+  background-color: #0a8a01;
 }
 
 .sidebar-open .rodape {
