--- a/LanchesSenac/src/Pages/Login/Cadastro.css
+++ b/LanchesSenac/src/Pages/Login/Cadastro.css
@@ -1,76 +1,182 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
-body{
+ *{
+    padding: 0;
     margin: 0;
-    font-family: 'Noto Sans' , sans-serif;
-    
-}
-
-.main-cadastro{
-    width: 100vw;
-    height: 100vh;
-    background:#FFBB00;
-    display: flex;
+    box-sizing: border-box;
+    font-family: 'Inter', sans-serif;
     justify-content: center;
-    align-items: center;
+ }
 
-}
-
-.left-cadastro{
-    width: 60vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.left-cadastro > h1 {
-    color: black;
-}
-
-.right-cadastro{
-    width: 50vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.card-cadastro{
+ body {
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    padding: 0px 175px;
     background: white;
-   
-    box-shadow: 0px 10px 40px #00000056;
+ }
+
+ .container {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.212);
+ }
+
+ .form-image {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #FFBB00;
+    padding: 1rem;
+ }
+
+ .form-image img {
+    width: 31rem;
+ }
+
+ .form {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    padding: 3rem;
+ }
+
+ .form-header{
+    margin-bottom: 3rem;
+    display: flex;
+    justify-content: space-between;
+ }
+
+ .login-button {
+    display: flex;
+    align-items: center;
 }
 
-.card-cadastro > h1{
-    color: black;
-    font-weight: 800;
-    margin: 0;
-    margin-top: 50px;
-}
-
-.textcampo{
-   
-    margin: 10px;
-
-}
-
-.textcampo > input{
-    width: 20%;
+.login-button button {
     border: none;
-    margin-inline: 10px;
-   border-radius: 5px;
-    padding: 15px;
-    background:#FFBB00;
-    
-    
+    background-color: #FFBB00;
+    padding: 0.4rem 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+}
 
+.login-button button:hover {
+    background-color: #FFBB00;
+}
+
+.login-button button a {
+    text-decoration: none;
+    font-weight: 500;
+    color: #fff;
+}
+
+.form-header h1::after {
+    content: '';
+    display: block;
+    width: 5rem;
+    height: 0.3rem;
+    background-color: #FFBB00;
+    margin: 0 auto;
+    position: absolute;
+    border-radius: 10px;
+}
+
+.input-group {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 1rem 0;
+}
+
+.input-box {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1.1rem;
+}
+
+.input-box input {
+    margin: 0.6rem 0;
+    padding: 0.8rem 1.2rem;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 1px 1px 6px #0000001c;
+    font-size: 0.8rem;
+}
+
+.input-box input:hover {
+    background-color: #eeeeee75;
+}
+
+.input-box input:focus-visible {
+    outline: 1px solid #FFBB00;
+}
+
+.input-box input::placeholder {
+    color: #000000be;
+}
+
+.continue-button button {
+    width: 100%;
+    margin-top: 2.5rem;
+    border: none;
+    background-color: #FFBB00;
+    padding: 0.62rem;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.continue-button button:hover {
+    background-color: #FFBB00;
+}
+
+.continue-button button a {
+    text-decoration: none;
+    font-size: 0.93rem;
+    font-weight: 500;
+    color: #fff;
+}
+
+@media screen and (max-width: 1330px) {
+    .form-image {
+        display: none;
+    }
+    .container {
+        width: 50%;
+    }
+    .form {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 1064px) {
+    .container {
+        width: 90%;
+        height: auto;
+    }
+    .input-group {
+        flex-direction: column;
+        z-index: 5;
+        padding-right: 5rem;
+        max-height: 10rem;
+        overflow-y: scroll;
+        flex-wrap: nowrap;
+    }
+    .gender-inputs {
+        margin-top: 2rem;
+    }
+    .gender-group {
+        flex-direction: column;
+    }
+    .gender-title h6 {
+        margin: 0;
+    }
+    .gender-input {
+        margin-top: 0.5rem;
+    }
 }
